WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
19805
Array.concat turns missing array elements into "undefined"
https://bugs.webkit.org/show_bug.cgi?id=19805
Summary
Array.concat turns missing array elements into "undefined"
Darin Adler
Reported
2008-06-28 21:46:00 PDT
I think I may just have broken this, but in any case it's broken, and I have both a fix and a test.
Attachments
patch
(9.29 KB, patch)
2008-06-28 22:05 PDT
,
Darin Adler
no flags
Details
Formatted Diff
Diff
corrected patch
(14.59 KB, patch)
2008-06-28 22:31 PDT
,
Darin Adler
sam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2008-06-28 22:05:39 PDT
Created
attachment 21992
[details]
patch
Darin Adler
Comment 2
2008-06-28 22:31:11 PDT
Created
attachment 21993
[details]
corrected patch
Darin Adler
Comment 3
2008-06-28 22:38:49 PDT
r34868
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug